# internal/controller/http/v1/article.go
@@ -24,6 +24,7 @@ import (
 // @Failure     401 {object} response.Error
 // @Failure     500 {object} response.Error
 // @Router      /articles [post]
+// @Security    BearerAuth
 func (r *V1) postCreateArticle(ctx *fiber.Ctx) error {
 	var body request.ArticleCreateRequest
 
